--- a/k8s/weekdone-client/templates/hpa.yaml
+++ b/k8s/weekdone-client/templates/hpa.yaml
@@ -2,14 +2,14 @@
 apiVersion: autoscaling/v2beta1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{ include "weekdone-app.fullname" . }}
+  name: {{ include "weekdone-client.fullname" . }}
   labels:
-    {{- include "weekdone-app.labels" . | nindent 4 }}
+    {{- include "weekdone-client.labels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{ include "weekdone-app.fullname" . }}
+    name: {{ include "weekdone-client.fullname" . }}
   minReplicas: {{ .Values.autoscaling.minReplicas }}
   maxReplicas: {{ .Values.autoscaling.maxReplicas }}
   metrics:
