--- a/k8s/weekdone-server/Chart.yaml
+++ b/k8s/weekdone-server/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: weekdone-app
+name: weekdone-server
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
