--- a/k8s/weekdone-server/templates/serviceaccount.yaml
+++ b/k8s/weekdone-server/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "weekdone-app.serviceAccountName" . }}
+  name: {{ include "weekdone-server.serviceAccountName" . }}
   labels:
-    {{- include "weekdone-app.labels" . | nindent 4 }}
+    {{- include "weekdone-server.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
