ADD force parent pipeline to fail when child fails

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,7 @@
 weekdone-client-trigger:
   trigger:
     include: client/.gitlab-ci.yml
+    strategy: depend
   only:
     changes:
       - client/*
@@ -8,6 +9,7 @@ weekdone-client-trigger:
 weekdone-server-trigger:
   trigger:
     include: server/.gitlab-ci.yml
+    strategy: depend
   only:
     changes:
       - server/*
