--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,5 @@
 weekdone-client-trigger:
+  stage: build
   trigger:
     include: client/.gitlab-ci.yml
     strategy: depend
@@ -7,6 +8,7 @@ weekdone-client-trigger:
       - client/*
 
 weekdone-server-trigger:
+  stage: build
   trigger:
     include: server/.gitlab-ci.yml
     strategy: depend
