--- a/client/chart/templates/deployment.yaml
+++ b/client/chart/templates/deployment.yaml
@@ -34,6 +34,9 @@ spec:
           # image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
           image: "{{ .Values.image.repository }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom:
+          - configMapRef:
+              name: {{ .Release.Name }}-configmap
           ports:
             - name: http
               containerPort: 80
