--- a/client/chart/values.yaml
+++ b/client/chart/values.yaml
@@ -43,8 +43,9 @@ service:
 env:
 ##non-sensitve data
   public:
-    BACKEND_URL: DUMMY
-    BACKEND_PORT: DUMMY
+    CLIENT_PORT: 80
+    BACKEND_URL: weekdone-server 
+    BACKEND_PORT: 80
 
 ingress:
   enabled: true
