--- a/server/chart/templates/deployment.yaml
+++ b/server/chart/templates/deployment.yaml
@@ -34,6 +34,11 @@ spec:
           # image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           image: "{{ .Values.image.repository }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+          envFrom:
+          - configMapRef:
+              name: {{ .Release.Name }}-configmap
+          - secretRef:
+              name: {{ .Release.Name }}-secret
           ports:
             - name: http
               containerPort: 80
