--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "supertest": "^6.1.3"
   }
 }
