--- a/client/chart/templates/deployment.yaml
+++ b/client/chart/templates/deployment.yaml
@@ -39,7 +39,7 @@ spec:
               name: {{ .Release.Name }}-configmap
           ports:
             - name: http
-              containerPort: 80
+              containerPort: {{ .Values.env.public.CLIENT_PORT }}
               protocol: TCP
           livenessProbe:
             httpGet:
