--- a/server/chart/values.yaml
+++ b/server/chart/values.yaml
@@ -26,6 +26,7 @@ serviceAccount:
 env:
 ##non-sensitve data
   public:
+    SERVER_PORT: 4000 ## referenced by deployment as well
     MONGO_PORT: 27017
     MONGO_HOST: weekdone-mongo-mongodb
     MONGO_DB: weekdone-reviews
