--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -16,8 +16,8 @@
 # For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
 on:
-  release:
-    types: [created]
+  repository_dispatch:
+    types: [opened, deleted, created]
 
 env:
   AZURE_WEBAPP_NAME: weekdone-client    # set this to your application's name
