--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -15,6 +15,11 @@
 #
 # For more information on GitHub Actions for Azure, refer to https://github.com/Azure/Actions
 # For more samples to get started with GitHub Action workflows to deploy to Azure, refer to https://github.com/Azure/actions-workflow-samples
+name: manual workflow
+on:
+  workflow_dispatch
+  
+name: manual workflow
 on:
   repository_dispatch:
     types: [opened, deleted, created]
