--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -41,6 +41,8 @@ jobs:
       run: |
         # Build and test the project, then
         # deploy to Azure Web App.
+        pwd
+        ls -la
         npm install
         npm run build --if-present
         npm run test --if-present
