--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -23,7 +23,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: weekdone-client    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './client'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
@@ -37,12 +37,11 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ env.NODE_VERSION }}
-    - name: npm install, build, and test
+    - name: Client npm build and install
       run: |
-        # Build and test the project, then
-        # deploy to Azure Web App.
         pwd
         ls -la
+        cd ./client
         npm install
         npm run build --if-present
         npm run test --if-present
