--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -23,7 +23,7 @@ on:
 
 env:
   AZURE_WEBAPP_NAME: weekdone    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: './client'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
@@ -39,10 +39,8 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
     - name: Weekdone Client npm build and Install
       run: |
-        pwd
-        ls -la
-        cd ./client
-        npm ci       
+        npm ci
+      working-directory: ./client
     - name: 'Deploy to Azure WebApp'
       uses: azure/webapps-deploy@v2
       with:
