--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -27,10 +27,6 @@ env:
   NODE_VERSION: '10.x'                # set this to the node version to use
 
 jobs:
-  sast-scan:
-    name: Snyk Scan
-    runs-on: ubuntu-latest
-    uses: eeveebank/github-actions-snyk@1.0.6
   build-and-deploy:
     name: Build and Deploy
     runs-on: ubuntu-latest
@@ -41,6 +37,8 @@ jobs:
       uses: actions/setup-node@v2
       with:
         node-version: ${{ env.NODE_VERSION }}
+    - name: Snyc Scan
+      uses: eeveebank/github-actions-snyk@1.0.6
     - name: Weekdone Client npm build and Install
       run: |
         npm ci
