--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -39,6 +39,8 @@ jobs:
         node-version: ${{ env.NODE_VERSION }}
     - name: Snyc Scan
       uses: eeveebank/github-actions-snyk@1.0.6
+      with:
+        type: iac
     - name: Weekdone Client npm build and Install
       run: |
         npm ci
