--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -1,24 +1,7 @@
-name: njsscan
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-jobs:
-  njsscan:
-    runs-on: ubuntu-latest
-    name: njsscan check
-    steps:
-    - name: Checkout the code
-      uses: actions/checkout@v2
-    - name: nodejsscan scan
-      id: njsscan
-      uses: ajinabraham/njsscan-action@master
-      with:
-        args: '.'
-
 name: manual workflow
 on:
+  push:
+    branches: [azure-appservice]
   workflow_dispatch:
   repository_dispatch:
     types: [opened, deleted, created]
