--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -7,32 +7,32 @@ on:
     types: [opened, deleted, created]
 
 env:
-  AZURE_WEBAPP_NAME: weekdone    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: './client'      # set this to the path to your web app project, defaults to the repository root
-  NODE_VERSION: '10.x'                # set this to the node version to use
+  AZURE_WEBAPP_NAME: weekdone # set this to your application's name
+  AZURE_WEBAPP_PACKAGE_PATH: "./client" # set this to the path to your web app project, defaults to the repository root
+  NODE_VERSION: "10.x" # set this to the node version to use
 
 jobs:
   build-and-deploy:
-    name: Build and Deploy
+    name: Build and Install NPM packages
     runs-on: ubuntu-latest
     environment: production
     steps:
-    - uses: actions/checkout@v2
-    - name: Use Node.js ${{ env.NODE_VERSION }}
-      uses: actions/setup-node@v2
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-    - name: Snyk Scan
-      uses: eeveebank/github-actions-snyk@1.0.6
-      with:
-        type: iac
-    - name: Weekdone Client npm build and Install
-      run: |
-        npm ci
-      working-directory: ./client
-    - name: 'Deploy to Azure WebApp'
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-        package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ env.NODE_VERSION }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+      - name: Snyk Scan
+        uses: eeveebank/github-actions-snyk@1.0.6
+        with:
+          type: iac
+      - name: Weekdone Client npm build and Install
+        run: |
+          npm ci
+        working-directory: ./client
+      - name: "Deploy to Azure WebApp"
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
