--- a/.github/workflows/github-ci.yml
+++ b/.github/workflows/github-ci.yml
@@ -28,9 +28,34 @@ jobs:
         with:
           args: "."
 
+  CodeQL-Scan-SAST:
+    name: CodeQL-Scan-SAST
+    runs-on: ubuntu-latest
+    needs: NodeJSScan-SAST
+    permissions:
+      actions: read
+      contents: read
+      security-events: write
+
+    strategy:
+      fail-fast: false
+      matrix:
+        language: ["javascript"]
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v1
+        with:
+          languages: ${{ matrix.language }}
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v1
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v1
+
   build-and-deploy:
     name: Build and Install NPM packages
-    needs: NodeJSScan-SAST
+    needs: CodeQL-Scan-SAST
     runs-on: ubuntu-latest
     environment: production
     steps:
